--- a/about.html
+++ b/about.html
@@ -4,8 +4,131 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <style>
+    /* === Base Styles === */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      color: #333;
+      background: linear-gradient(135deg, #f8fafc, #e8ecf3);
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    h2 {
+      color: #3b0764;
+      font-size: 2.2em;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.05em;
+      line-height: 1.7;
+      max-width: 800px;
+      margin: 10px auto;
+      color: #444;
+    }
+
+    strong {
+      color: #6d28d9;
+    }
+
+    /* === Navigation Bar === */
+    .navbar {
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+      background: #6d28d9;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    }
+
+    .nav-btn {
+      color: #fff;
+      margin: 0 15px;
+      padding: 10px 18px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background 0.3s ease;
+    }
+
+    .nav-btn:hover {
+      background-color: #7c3aed;
+    }
+
+    /* === About Section === */
+    .about {
+      margin-top: 60px;
+      background: #fff;
+      padding: 50px 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 25px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 950px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* === Skills Section === */
+    .skills {
+      margin-top: 50px;
+      padding: 40px 20px;
+    }
+
+    .skills-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 20px;
+    }
+
+    .skill {
+      background: #ede9fe;
+      color: #4c1d95;
+      border: 1px solid #c4b5fd;
+      padding: 12px 20px;
+      border-radius: 25px;
+      font-weight: 500;
+      font-size: 0.95em;
+      transition: all 0.3s ease;
+    }
+
+    .skill:hover {
+      background: #6d28d9;
+      color: white;
+      transform: scale(1.05);
+      box-shadow: 0 3px 10px rgba(109, 40, 217, 0.4);
+    }
+
+    /* === Footer === */
+    footer {
+      background: #6d28d9;
+      padding: 25px;
+      color: #fff;
+      font-size: 14px;
+      margin-top: 60px;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    @media (max-width: 700px) {
+      p {
+        width: 90%;
+        font-size: 1em;
+      }
+
+      .about {
+        width: 95%;
+        padding: 30px 15px;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <!-- Navigation -->
   <nav class="navbar">
