--- a/index.html
+++ b/index.html
@@ -4,27 +4,138 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Michael Otieno Odhiambo | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <!-- === Font Awesome Icons === -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- === Embedded CSS Styling === -->
+  <style>
+    body {
+      background: linear-gradient(135deg, #0f0f0f, #1c1c2a);
+      color: #e5e5e5;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    h1, h3 {
+      color: #c084fc;
+    }
+
+    a {
+      color: #a78bfa;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #f472b6;
+    }
+
+    .hero {
+      padding: 40px 20px;
+    }
+
+    .profile-pic {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #00b4ff;
+      box-shadow: 0 0 20px rgba(0, 180, 255, 0.4);
+      margin-bottom: 15px;
+    }
+
+    .navbar {
+      margin-top: 15px;
+    }
+
+    .nav-btn {
+      background-color: #1f1f1f;
+      color: #a78bfa;
+      padding: 10px 20px;
+      border-radius: 8px;
+      margin: 5px;
+      font-weight: 500;
+      transition: 0.3s;
+      display: inline-block;
+    }
+
+    .nav-btn:hover {
+      background-color: #a855f7;
+      color: #fff;
+    }
+
+    .intro {
+      padding: 40px 20px;
+      max-width: 700px;
+      margin: 0 auto;
+      line-height: 1.6;
+      background-color: rgba(30, 30, 40, 0.85);
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(168, 85, 247, 0.2);
+    }
+
+    .cta-buttons {
+      margin-top: 30px;
+    }
+
+    .main-btn {
+      display: inline-block;
+      background-color: #a855f7;
+      color: white;
+      padding: 12px 25px;
+      margin: 10px;
+      border-radius: 8px;
+      font-weight: 500;
+      transition: 0.3s;
+    }
+
+    .main-btn:hover {
+      background-color: #f472b6;
+      transform: scale(1.05);
+    }
+
+    footer {
+      background-color: #111;
+      padding: 20px;
+      color: #aaa;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    .social-links {
+      margin-top: 15px;
+    }
+
+    .social-icon {
+      font-size: 25px;
+      margin: 0 10px;
+      color: #a78bfa;
+      transition: 0.3s;
+    }
+
+    .social-icon:hover {
+      color: #f472b6;
+      transform: scale(1.2);
+    }
+  </style>
 </head>
+
 <body>
   <!-- Header Section -->
   <header class="hero">
-   <img src="assests/images/profile.jpg" alt="Michael Otieno Odhiambo" class="profile-pic">
-
-
+    <img src="assests/images/profile.jpg" alt="Michael Otieno Odhiambo" class="profile-pic">
     <h1>MICHAEL OTIENO ODHIAMBO</h1>
     <h3>ICT Professional | Fullstack Developer</h3>
 
-    <!-- Navigation Menu -->
     
   </header>
-
 
   <!-- Introduction Section -->
   <section class="intro">
     <p>
-      Welcome to my portfolio! I’m passionate about technology, software development, <br>
-
+      Welcome to my portfolio! I’m passionate about technology, software development,<br>
       and building efficient digital solutions that make life easier and smarter.
     </p>
 
@@ -38,8 +149,14 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 Michael Otieno Odhiambo | All Rights Reserved</p>
+    <div class="social-links">
+      <a href="https://facebook.com/" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.linkedin.com/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://twitter.com/" target="_blank" class="social-icon"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:michaelodhiambo692@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+    </div>
   </footer>
 
-  <script src="js/main.js"></script>
 </body>
 </html>
