--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects | Michael Otieno Odhiambo</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <!-- === Embedded Modern CSS === -->
+  <style>
+    /* === Global Styles === */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      color: #e5e5e5;
+      background: linear-gradient(120deg, #0f0c29, #302b63, #24243e);
+      background-attachment: fixed;
+      text-align: center;
+    }
+
+    h1, h2, h3 {
+      color: #c084fc;
+    }
+
+    a {
+      color: #a78bfa;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    a:hover {
+      color: #f472b6;
+    }
+
+    /* === Header === */
+    .hero.small {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 60px 20px;
+      box-shadow: 0 0 15px rgba(168, 85, 247, 0.2);
+    }
+
+    .navbar {
+      margin-top: 15px;
+    }
+
+    .navbar a {
+      background-color: rgba(255, 255, 255, 0.05);
+      color: #a78bfa;
+      padding: 10px 18px;
+      border-radius: 8px;
+      margin: 5px;
+      font-weight: 500;
+      transition: all 0.3s;
+    }
+
+    .navbar a:hover {
+      background-color: #a855f7;
+      color: #fff;
+      box-shadow: 0 0 15px rgba(168, 85, 247, 0.5);
+    }
+
+    /* === Projects Section === */
+    .projects {
+      padding: 60px 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .project-card {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(168, 85, 247, 0.3);
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(168, 85, 247, 0.1);
+      max-width: 320px;
+      padding: 25px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .project-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 0 25px rgba(168, 85, 247, 0.3);
+      background: rgba(168, 85, 247, 0.1);
+    }
+
+    .project-card h3 {
+      margin-bottom: 10px;
+      font-size: 1.3em;
+      color: #f0abfc;
+    }
+
+    .project-card p {
+      font-size: 1em;
+      color: #ddd;
+      line-height: 1.6;
+    }
+
+    /* === Footer === */
+    footer {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 20px;
+      color: #aaa;
+      font-size: 14px;
+      margin-top: 40px;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4);
+    }
+
+    @media (max-width: 700px) {
+      .projects {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .project-card {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <header class="hero small">
     <h1>My Projects</h1>
